refactor: replace get(0) by getFirst()